crates/escalier_parser/src/snapshots/escalier_parser__tests__blocks-5.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let foo = do {let x = 5; console.log(x); x};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 44,
                    },
                },
                span: 0..44,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 7,
                        },
                    },
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 10,
                            },
                            end: Position {
                                line: 0,
                                column: 43,
                            },
                        },
                        span: 10..43,
                        kind: DoExpr(
                            DoExpr {
                                body: Block {
                                    span: 13..43,
                                    stmts: [
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 14,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 24,
                                                },
                                            },
                                            span: 14..24,
                                            kind: LetDecl(
                                                LetDecl {
                                                    pattern: Pattern {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 18,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 19,
                                                            },
                                                        },
                                                        span: 18..19,
                                                        kind: Ident(
                                                            BindingIdent {
                                                                name: "x",
                                                                mutable: false,
                                                                span: 18..19,
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 18,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 19,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    type_ann: None,
                                                    init: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 22,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 23,
                                                            },
                                                        },
                                                        span: 22..23,
                                                        kind: Lit(
                                                            Num(
                                                                Num {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 22,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 23,
                                                                        },
                                                                    },
                                                                    span: 22..23,
                                                                    value: "5",
                                                                },
                                                            ),
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 39,
                                                },
                                            },
                                            span: 25..39,
                                            kind: App(
                                                App {
                                                    lam: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 25,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 36,
                                                            },
                                                        },
                                                        span: 25..36,
                                                        kind: Member(
                                                            Member {
                                                                obj: Expr {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 25,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 32,
                                                                        },
                                                                    },
                                                                    span: 25..32,
                                                                    kind: Ident(
                                                                        Ident {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 25,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 32,
                                                                                },
                                                                            },
                                                                            span: 25..32,
                                                                            name: "console",
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                prop: Ident(
                                                                    Ident {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 33,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 36,
                                                                            },
                                                                        },
                                                                        span: 33..36,
                                                                        name: "log",
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    args: [
                                                        ExprOrSpread {
                                                            spread: None,
                                                            expr: Expr {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 37,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 38,
                                                                    },
                                                                },
                                                                span: 37..38,
                                                                kind: Ident(
                                                                    Ident {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 37,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 38,
                                                                            },
                                                                        },
                                                                        span: 37..38,
                                                                        name: "x",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ],
                                                    type_args: None,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 41,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 42,
                                                },
                                            },
                                            span: 41..42,
                                            kind: Ident(
                                                Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 41,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 42,
                                                        },
                                                    },
                                                    span: 41..42,
                                                    name: "x",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    ],
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
